add links to footer

--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
                     <li>Contact</li>
                 </ul>
             </div>
-            <div>
-                <h4>Contact Me</h4>
-                <p>LinkedIn</p>
+            <div class="social-links">
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="https://github.com/joshmwood">GitHub</a></li>
+                    <li><a href="mailto:joshmwood95@gmail.com">Email</a></li>
+                    <li><a href="https://www.linkedin.com/in/joshmwood/">LinkedIn</a></li>
+                </ul>
             </div>
             
         </div>
