--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <div class="icon"><img src="img/Node.js_logo.svg"></div>
         </div>
     </div>
-    <section class="projects">
+    <section class="projects" id="projects">
 
         <h2 class="projects-heading">Projects</h2>
 
         <div class="project">
             <h3 class="project-heading">To Do List</h3>
-            <div class="github-link"><a href="https://github.com/joshmwood/todo-list" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
+            <div id="github-link"><a href="https://github.com/joshmwood/todo-list" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
             <p>A web app in which the user can create and manage lists, each with their own creatable and manageable tasks. </p>
             <p> This project was made with HTML, CSS and Javascript and was intended to introduce myself to the GitHub workflow. While the idea for it came from watching a tutorial, the tutorial was not followed step by step and instead served as a place to solve my own bugs (among many other places like StackOverflow and Reddit).</p>
             <img class="project-image" src="img/todo.png">
@@ -41,25 +41,28 @@
             </div>
         </div>
     </section>
-
-
-
+    <section class="contact-section" id="contact">
+        <div class="contact">
+            <h2>Let's Talk!</h2>
+            <p>Get In Touch 👉🏼 <a href="mailto:joshmwood95@gmail.com">joshmwood95@gmail.com</a></p>
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer-sections">
-            <div>
-                <h4>Joshua Wood</h4>
-                <p>©2022 Built and designed by Joshua Wood</p>
+            <div class="copyright">
+                <h4 class="footer-subheading">Joshua Wood</h4>
+                <p>©2022 Designed and Developed by Joshua Wood</p>
             </div>
-            <div>
-                <h4>Site Navigation</h4>
+            <div class="nav-links">
+                <h4 class="footer-subheading" >Site Navigation</h4>
                 <ul>
-                    <li>About</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="social-links">
-                <h4>Links</h4>
+                <h4 class="footer-subheading">Links</h4>
                 <ul>
                     <li><a href="https://github.com/joshmwood">GitHub</a></li>
                     <li><a href="mailto:joshmwood95@gmail.com">Email</a></li>
