add live demo link to todo app

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         <h2 class="projects-heading"><span class="header-underline">Projects</span></h2>
 
         <div class="projects" id="projects">
-
             <div class="project">
                 <h3 class="project-heading">To Do List</h3>
-                <div id="github-link"><a href="https://github.com/joshmwood/todo-list" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
+                <div class="links">
+                    <div id="github-link"><a href="https://github.com/joshmwood/todo-list" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
+                    <div id="github-link"><a href="https://joshmwood.github.io/todo-list/" target='_blank'><img class="github-project-link" src="img/800px-Chain_link_icon_slanted.png">View Live Demo</a></div>
+                </div>
                 <p>A web app in which the user can create and manage lists, each with their own creatable and manageable tasks. </p>
                 <p> This project was made with HTML, CSS and Javascript and was intended to introduce myself to the GitHub workflow. While the idea for it came from watching a tutorial, the tutorial was not followed step by step and instead served as a place to solve my own bugs (among many other places like StackOverflow and Reddit).</p>
                 <img class="project-image" src="img/todo.png">
@@ -43,7 +45,10 @@
             </div>
             <div class="project">
                 <h3 class="project-heading">Higher Lower Melee</h3>
-                <div id="github-link"><a href="https://github.com/joshmwood/higherlowermelee" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
+                <div class="links">
+                    <div id="github-link"><a href="https://github.com/joshmwood/higherlowermelee" target='_blank'><img class="github-project-link" src="img/GitHub-Mark-64px.png">View On GitHub</a></div>
+                    <div id="github-link"><a href="https://joshmwood.github.io/higherlowermelee/" target='_blank'><img class="github-project-link" src="img/800px-Chain_link_icon_slanted.png">View Live Demo</a></div>
+                </div>
                 <p>A variation of the <a href="https://www.higherlowergame.com">Higher Lower Game</a>, in which users must correctly guess which Super Smash Bros YouTube video has more views.</p>
                 <p> This game was made with HTML, CSS, Javascript, and involved work with YouTube's API to obtain a dataset. While existing websites of similar games were a great resource to get started, the real challenge arose from learning CSS tricks to make the game look great and feel fluid. </p>
 
