add more responsive styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section class="hero">
         <div class="hero--wrapper">
-            <p class="hero--copy">Hi 👋🏼, My Name is <span class="hero--copy__highlight">Josh&nbsp;Wood.</span> I am a Web Designer and Developer based in Toronto. I love to build web apps, user interfaces, games and more!</p>
+            <p class="hero--copy">Hi 👋🏼, I'm <span class="hero--copy__highlight">Josh&nbsp;Wood.</span> I am a Web Designer and Developer based in Toronto. I love to build web apps, user interfaces, games and more!</p>
         </div>
     </section>
     <div class="wrapper">
