fix contrast on links to pass accessibility test

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="project">
                     <h3 class="project--heading">To Do List</h3>
                     <div class="project--links">
-                        <div class="project--github"><a href="https://github.com/joshmwood/todo-list" target='_blank'><img class="project--icon" src="img/GitHub-Mark-64px.png">GitHub</a></div>
+                        <div class="project--github"><a href="https://github.com/joshmwood/todo-list" target='_blank' class="project--link"><img class="project--icon" src="img/GitHub-Mark-64px.png">GitHub</a></div>
                         <div class="project--github"><a href="https://joshmwood.github.io/todo-list/" target='_blank'><img class="project--icon" src="img/800px-Chain_link_icon_slanted.png">View Live Demo</a></div>
                     </div>
                     <p>A web app in which the user can create and manage lists, each with their own creatable and manageable tasks. </p>
@@ -68,7 +68,7 @@
             <h2 class="contact--heading heading"><span class="heading__underline">Let's Talk!</span></h2>
             
             <div class="contact--link">
-                <p>Get In Touch 👉🏼 <a href="mailto:joshmwood95@gmail.com">joshmwood95@gmail.com</a></p>
+                <p>Get In Touch 👉🏼 <a href="mailto:joshmwood95@gmail.com" class="contact--email">joshmwood95@gmail.com</a></p>
             </div>
         </section>
     </div>
@@ -78,7 +78,7 @@
                 <h4 class="footer--subheading">Joshua Wood</h4>
                 <p>©2022 Designed and Developed by Joshua Wood</p>
             </div>
-            <div class="nav-links">
+            <div class="footer--nav-links">
                 <h4 class="footer--subheading" >Site Navigation</h4>
                 <ul>
                     <li><a href="#">About</a></li>
@@ -86,7 +86,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="social-links">
+            <div class="footer--nav-links">
                 <h4 class="footer--subheading">Links</h4>
                 <ul>
                     <li><a href="https://github.com/joshmwood">GitHub</a></li>
