--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="icon"><img src="img/HTML5_logo_and_wordmark.svg"></div>
                 <div class="icon"><img src="img/Javascript-shield.svg"></div>
                 <div class="icon"><img src="img/Node.js_logo.svg"></div>
+                <div class="icon"><img src="img/expresslogo.png"></div>
             </div>
         </div>
         <div class="projects-section" id="projects">
@@ -41,7 +42,7 @@
                     </div>
                     <p>A web app in which the user can create and manage lists, each with their own creatable and manageable tasks. </p>
                     <p> This project was made with HTML, CSS and Javascript and was intended to introduce myself to the GitHub workflow. While the idea for it came from watching a tutorial, the tutorial was not followed step by step and instead served as a place to solve my own bugs (among many other places like StackOverflow and Reddit).</p>
-                    <img class="project--image" src="img/todo.png">
+                    <img class="project--image" src="img/todo2.png">
                     <div class="project--stack">
                         <span>HTML</span><span>CSS</span><span>Javascript</span>
                     </div>
@@ -54,11 +55,26 @@
                         <div class="project--github"><a href="https://joshmwood.github.io/higherlowermelee/" target='_blank'><img class="project--icon" src="img/800px-Chain_link_icon_slanted.png">View Live Demo</a></div>
                     </div>
                     <p>A variation of the <a href="https://www.higherlowergame.com">Higher Lower Game</a>, in which users must correctly guess which Super Smash Bros YouTube video has more views.</p>
-                    <p> This game was made with HTML, CSS, Javascript, and involved work with YouTube's API to obtain a dataset. While existing websites of similar games were a great resource to get started, the real challenge arose from learning CSS tricks to make the game look great and feel fluid. </p>
+                    <p>This game was made with HTML, CSS, Javascript, and involved work with YouTube's API to obtain a dataset. While existing websites of similar games were a great resource to get started, the real challenge arose from learning CSS tricks to make the game look great, feel fluid, and most importantly, be responsive. </p>
 
-                    <img class="project--image" src="img/higher.png">
+                    <img class="project--image" src="img/higher2.png">
                     <div class="project--stack">
                         <span>HTML</span><span>CSS</span><span>Javascript</span><span>API</span>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <h3 class="project--heading">Albums Google Sheets CMS</h3>
+                    <div class="project--links">
+                        <div class="project--github"><a href="https://github.com/joshmwood/sheets-cms" target='_blank'><img class="project--icon" src="img/GitHub-Mark-64px.png">GitHub</a></div>
+                        <div class="project--github"><a href="#"><img class="project--icon" src="img/800px-Chain_link_icon_slanted.png">View Live Demo</a></div>
+                    </div>
+                    <p>A list of every album I've listened to and my rating of it, managed in a Google Sheet and rendered onto a webpage, complete with sorting and filtering functionality.</p>
+                    <p>This project was made with HTML, CSS, Javascript, Express and the Google Sheets API. I created this project to learn how to work with data, API calls, and servers.</p>
+
+                    <img class="project--image" src="img/albums-screenshot.png">
+                    <div class="project--stack">
+                        <span>HTML</span><span>CSS</span><span>Javascript</span><span>API</span><span>Express</span>
                     </div>
                 </div>
             </div>
